--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngx-translate/http-loader": "^7.0.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.2.0",
+    "cors": "^2.8.5",
     "firebase": "^9.15.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.5.0",
